# Cybersecurity-learning-with-Violent-Python-Book

./: main.py  pyFile1.py  pyproject.toml
Violent_Python/: unzip.py
myViolentPython/: pyFile1.py  zipCracker.py
